@@ -2,6 +2,8 @@ $Rev$
 [2007/09/19]
 SvnSupport.py       Fix svn_plugin crash in Linux
 common.py           Add get_config_file_obj() function, and change the invoke.
+PrefDialog.py dict4ini.py
+                    Add config.ini support in Preference Dialog
 
 [2007/09/17]
 FindInFiles.py DirBrowser.py
